Ensure buttons default to inline with nice v align

--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -39,4 +39,6 @@
 	-ms-user-select: none;
 	user-select: none;
 	-webkit-user-drag: none;
+	display: inline-block;
+	vertical-align: middle;
 }
